--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="text-primary">Vivswan
-          <span class="mb-0">Shitole</span>
-        </h1>
-        <div class="subheading mb-5">Graduate Researcher @ Oregon State University · Machine Learning Engineer @ Aitoe Labs · Software Engineer @ Texas Instruments ·
+        <h1 class="text-primary"> Vivswan </h1>
+        <h1 class="mb-0"> Shitole </h1>
+        <div class="subheading mb-5">Graduate Researcher · Oregon State University · Machine Learning Engineer · Aitoe Labs · Software Engineer · Texas Instruments · Student Researcher · IIT Bombay
           <a href="mailto:shitolev@oregonstate.edu">shitolev@oregonstate.edu</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
