added google citation link

--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
       <!--<a href="#">
         <i class="fab fa-twitter"></i>
       </a>-->
-      <a href="https://www.facebook.com/vivswan.shitole" target="_blank">
+      <!--<a href="https://www.facebook.com/vivswan.shitole" target="_blank">
         <i class="fab fa-facebook-f"></i>
+      </a>-->
+      <a href="https://scholar.google.com/citations?user=sgBg3_UAAAAJ&hl=en&oi=ao" target="_blank">
+        <i class="fas fa-graduation-cap"></i>
       </a>
     </div>
 
